@@ -58,9 +58,6 @@ proc check_trace {} {
     "Recording format: .*" \
     "Recorded 1 instructions in 1 functions \\\(0 gaps\\\) for .*" \
     ]
-  gdb_test "record instruction-history /f 1" \
-    "1\t   0x\[0-9a-f\]+ <\\+\[0-9\]+>:\tmov *\\\$0x0,%eax\r"
-  gdb_test "record function-call-history /c 1" "1\tmain"
 }
 
 # make sure we don't extend the trace when we ask twice.
@@ -86,9 +83,5 @@ with_test_prefix "reverse" {
 # and back
 with_test_prefix "forward" {
     gdb_test "stepi"
-    gdb_test "info record" [multi_line \
-      "Active record target: record-btrace" \
-      "Recording format: .*" \
-      "Recorded 1 instructions in 1 functions \\\(0 gaps\\\) for .*" \
-    ]
+    check_trace
 }
